# PersonneCodeExemple

./: CMakeLists.txt  README.md
include/: InfoPerso.h  Personne.h
src/: InfoPerso.cpp  Personne.cpp  main.cpp
